#130: fixed submenu is cropped

--- a/src/zo2/assets/zo2/development/less/megamenu.less
+++ b/src/zo2/assets/zo2/development/less/megamenu.less
@@ -14,6 +14,9 @@
   content: "";
   line-height: 0;
 }
+.zo2-megamenu .row-fluid{
+  overflow: visible !important;
+}
 .zo2-megamenu .mega-group:before,.zo2-megamenu .mega-group:after {
   display: table;
   content: "";
